--- a/main.html
+++ b/main.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" href="../Project_Samava/bsp/vendor/twbs/bootstrap/dist/css/bootstrap.min.css">
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css'>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="image/Logo Samava.png">
-    <title>Samava</title>
+    <link rel="icon" href="image/cloud.png">
+    <title>Admin Samava</title>
 </head>
 
 <body id="body-main">
-    <nav class="navbar bg-dark">
+    <nav class="navbar bg-dark" id="nav-bar">
         <div class="container-fluid">
             <a class="navbar-brand text-white">Antares Project</a>
             <div class="d-flex">
-                <a href="profile.php" class="btn btn-warning me-2"><i class="bi bi-gear me-2"></i>Configuración</a>
-                <a href="login.php" class="btn btn-danger"><i class="bi bi-box-arrow-in-left me-2"></i>Cerrar Sesión</a>
+                <a href="profile.php" class="btn btn-outline-warning me-2"><i class="bi bi-gear me-2"></i>Configuración</a>
+                <a href="login.html" class="btn btn-outline-danger"><i class="bi bi-box-arrow-in-left me-2"></i>Cerrar Sesión</a>
             </div>
         </div>
     </nav>
@@ -27,7 +27,7 @@
     <div class="container" id="container">
         <div class="row mt-3">
             <div class="d-flex justify-content-center">
-                <h3 class="w-25 text-center rounded-pill shadow" id="row-card">Usuarios</h3>
+                <h3 class="text-center p-2 rounded-pill shadow" id="row-card">Usuarios</h3>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12 mt-3 d-flex justify-content-center">
                 <div class="card shadow rounded-4" style="width: 18rem;">
@@ -42,16 +42,16 @@
                 <div class="card shadow rounded-4" style="width: 18rem;">
                     <img src="image/client.png" class="card-img-top" id="img-card">
                     <div class="card-body text-center rounded-bottom-4" id="card-body">
-                        <h5 class="card-title"><i class="bi bi-person-circle me-2"></i>Cliente</h5>
+                        <h5 class="card-title"><i class="bi bi-person-badge me-2"></i>Cliente</h5>
                         <a class="btn btn-outline-dark d-flex justify-content-center" onclick="javascript:cargarInterfaz('client', 'list')"><i class="bi bi-card-text me-2"></i>Gestionar</a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12 mt-3 d-flex justify-content-center">
                 <div class="card shadow rounded-4" style="width: 18rem;">
-                    <img src="image/taxid.png" class="card-img-top" id="img-card">
+                    <img src="image/Taxid.png" class="card-img-top" id="img-card">
                     <div class="card-body text-center rounded-bottom-4" id="card-body">
-                        <h5 class="card-title"><i class="bi bi-person-circle me-2"></i>Taxid</h5>
+                        <h5 class="card-title"><i class="bi bi-person-vcard me-2"></i>Taxid</h5>
                         <a class="btn btn-outline-dark d-flex justify-content-center" onclick="javascript:cargarInterfaz('taxid', 'list')"><i class="bi bi-card-text me-2"></i>Gestionar</a>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
                 <div class="card shadow rounded-4" style="width: 18rem;">
                     <img src="image/role.png" class="card-img-top" id="img-card">
                     <div class="card-body text-center rounded-bottom-4" id="card-body">
-                        <h5 class="card-title"><i class="bi bi-person-circle me-2"></i>Roles</h5>
+                        <h5 class="card-title"><i class="bi bi-person-lines-fill me-2"></i>Roles</h5>
                         <a class="btn btn-outline-dark d-flex justify-content-center" onclick="javascript:cargarInterfaz('role', 'list')"><i class="bi bi-card-text me-2"></i>Gestionar</a>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                 <div class="card shadow rounded-4" style="width: 18rem;">
                     <img src="image/privilegio.png" class="card-img-top" id="img-card">
                     <div class="card-body text-center rounded-bottom-4" id="card-body">
-                        <h5 class="card-title"><i class="bi bi-person-circle me-2"></i>Privilegios</h5>
+                        <h5 class="card-title"><i class="bi bi-person-video3 me-2"></i>Privilegios</h5>
                         <a class="btn btn-outline-dark d-flex justify-content-center" onclick="javascript:cargarInterfaz('privilege', 'list')"><i class="bi bi-card-text me-2"></i>Gestionar</a>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
         
         <div class="row mt-3">
             <div class="d-flex justify-content-center">
-                <h3 class="w-25 text-center rounded-pill shadow" id="row-card">Productos</h3>
+                <h3 class="p-2 text-center rounded-pill shadow" id="row-card">Productos</h3>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12 mt-3 d-flex justify-content-center">
                 <div class="card shadow rounded-4" style="width: 18rem;">
@@ -124,14 +124,14 @@
 
         <div class="row mt-3">
             <div class="d-flex justify-content-center">
-                <h3 class="w-25 text-center rounded-pill shadow" id="row-card">Orden de Trabajo</h3>
+                <h3 class="p-2 text-center rounded-pill shadow" id="row-card">Orden de Trabajo</h3>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12 mt-3 d-flex justify-content-center">
                 <div class="card shadow rounded-4" style="width: 18rem;">
                     <img src="image/workorder.png" class="card-img-top" id="img-card">
                     <div class="card-body text-center rounded-bottom-4" id="card-body">
                         <h5 class="card-title"><i class="bi bi-cloud-arrow-up me-2"></i>Orden de Trabajo</h5>
-                        <a class="btn btn-outline-dark d-flex justify-content-center" onclick="javascript:cargarInterfaz('workorder', 'list', null)"><i class="bi bi-card-text me-2"></i>Gestionar</a>
+                        <a class="btn btn-outline-dark d-flex justify-content-center" href="#nav-bar" onclick="javascript:cargarInterfaz('workorder', 'list', null)"><i class="bi bi-card-text me-2"></i>Gestionar</a>
                     </div>
                 </div>
             </div>
@@ -140,7 +140,7 @@
                     <img src="image/workorderflag.png" class="card-img-top" id="img-card">
                     <div class="card-body text-center rounded-bottom-4" id="card-body">
                         <h5 class="card-title"><i class="bi bi-device-ssd me-2"></i>Bandera de Orden de Trabajo</h5>
-                        <a class="btn btn-outline-dark d-flex justify-content-center" onclick="javascript:cargarInterfaz('workorderflag', 'list', null)"><i class="bi bi-card-text me-2"></i>Gestionar</a>
+                        <a class="btn btn-outline-dark d-flex justify-content-center" href="#nav-bar" onclick="javascript:cargarInterfaz('workorder_flag', 'list', null)"><i class="bi bi-card-text me-2"></i>Gestionar</a>
                     </div>
                 </div>
             </div>
@@ -150,14 +150,14 @@
 
         <div class="row mt-3">
             <div class="d-flex justify-content-center">
-                <h3 class="w-25 text-center rounded-pill shadow" id="row-card">Localizaciones</h3>
+                <h3 class="p-2 text-center rounded-pill shadow" id="row-card">Localizaciones</h3>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12 mt-3 d-flex justify-content-center">
                 <div class="card shadow rounded-4" style="width: 18rem;">
                     <img src="image/region.png" class="card-img-top" id="img-card">
                     <div class="card-body text-center rounded-bottom-4" id="card-body">
                         <h5 class="card-title"><i class="bi bi-compass me-2"></i>Región</h5>
-                        <a class="btn btn-outline-dark d-flex justify-content-center" onclick="javascript:cargarInterfaz('region', 'list')"><i class="bi bi-card-text me-2"></i>Gestionar</a>
+                        <a class="btn btn-outline-dark d-flex justify-content-center" href="#nav-bar" onclick="javascript:cargarInterfaz('region', 'list')"><i class="bi bi-card-text me-2"></i>Gestionar</a>
                     </div>
                 </div>
             </div>
@@ -199,7 +199,7 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12 mt-3 d-flex justify-content-center">
                 <div class="card shadow rounded-4" style="width: 18rem;">
-                    <img src="image/ciudad.png" class="card-img-top" id="img-card">
+                    <img src="image/cp.png" class="card-img-top" id="img-card">
                     <div class="card-body text-center rounded-bottom-4" id="card-body">
                         <h5 class="card-title"><i class="bi bi-mailbox-flag me-2"></i>Código Postal</h5>
                         <a class="btn btn-outline-dark d-flex justify-content-center" onclick="javascript:cargarInterfaz('city', 'list')"><i class="bi bi-card-text me-2"></i>Gestionar</a>
@@ -210,79 +210,88 @@
         
         <hr class="border border-white border-2 opacity-50 my-5">
 
-        <div class="row mt-3">
-            <div class="d-flex justify-content-center">
-                <h3 class="w-50 p-2 text-center rounded-4 shadow" id="row-card">Interfaces Secundarias</h3>
-            </div>
-            <div class="col-lg-2 col-md-3 col-sm-4 mt-3">
-                <div class="text-center">
-                    <a class="btn btn-outline-dark btn-lg rounded-3 shadow" onclick="javascript:cargarInterfaz('pais', 'list')"><i class="bi bi-flag-fill me-2"></i>Pais</a>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-3 col-sm-4 mt-3">
-                <div class="text-center">
-                    <a class="btn btn-outline-dark btn-lg rounded-3 shadow" onclick="javascript:cargarInterfaz('estado', 'list')"><i class="bi bi-buildings-fill me-2"></i>Estado</a>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-3 col-sm-4 mt-3">
-                <div class="text-center">
-                    <a class="btn btn-outline-dark btn-lg rounded-3 shadow-lg" onclick="javascript:cargarInterfaz('municipio', 'list')"><i class="bi bi-building me-2"></i>Municipio</a>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-3 col-sm-4 mt-3">
-                <div class="text-center">
-                    <a class="btn btn-outline-dark btn-lg rounded-3 shadow" onclick="javascript:cargarInterfaz('localidad', 'list')"><i class="bi bi-geo-alt-fill me-2"></i>Localidad</a>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-3 col-sm-4 mt-3">
-                <div class="text-center">
-                    <a class="btn btn-outline-dark btn-lg rounded-3 shadow-lg" onclick="javascript:cargarInterfaz('colonia', 'list')"><i class="bi bi-house-door me-2"></i>Colonia</a>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-3 col-sm-4 mt-3">
-                <div class="text-center">
-                    <a class="btn btn-outline-dark btn-lg rounded-3 shadow-lg" onclick="javascript:cargarInterfaz('meses', 'list')"><i class="bi bi-calendar-month me-2"></i>Meses</a>
-                </div>
-            </div>
+        <div class="d-flex justify-content-center mb-3">
+            <h3 class="p-2 text-center rounded-pill shadow p-1" id="row-card">Tablas Secundarias</h3>
         </div>
 
-        <div class="row mt-3">
-            <div class="col-lg-2 col-md-3 col-sm-4 mt-3">
-                <div class="text-center">
-                    <a class="btn btn-outline-dark btn-lg rounded-3 shadow" onclick="javascript:cargarInterfaz('moneda', 'list')"><i class="bi bi-flag-fill me-2"></i>Moneda</a>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-4 mt-3">
-                <div class="text-center">
-                    <a class="btn btn-outline-dark btn-lg rounded-3 shadow" onclick="javascript:cargarInterfaz('metodoPago', 'list')"><i class="bi bi-buildings-fill me-2"></i>Metodo de Pago</a>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-3 col-sm-4 mt-3">
-                <div class="text-center">
-                    <a class="btn btn-outline-dark btn-lg rounded-3 shadow-lg" onclick="javascript:cargarInterfaz('formaPago', 'list')"><i class="bi bi-building me-2"></i>Forma de Pago</a>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-3 col-sm-4 mt-3">
-                <div class="text-center">
-                    <a class="btn btn-outline-dark btn-lg rounded-3 shadow" onclick="javascript:cargarInterfaz('impuesto', 'list')"><i class="bi bi-geo-alt-fill me-2"></i>Impuesto</a>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-4 mt-3">
-                <div class="text-center">
-                    <a class="btn btn-outline-dark btn-lg rounded-3 shadow-lg" onclick="javascript:cargarInterfaz('objetoImpuesto', 'list')"><i class="bi bi-house-door me-2"></i>Objeto Impuesto</a>
-                </div>
-            </div>
+        <div class="table-responsive">
+            <table class="table">
+                <tr>
+                    <td>
+                        <a class="btn btn-outline-dark btn-lg rounded-3 shadow" href="#nav-bar" onclick="javascript:cargarInterfaz('pais', 'list')"><i class="bi bi-flag-fill me-2"></i>Pais</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-outline-dark btn-lg rounded-3 shadow" href="#nav-bar" onclick="javascript:cargarInterfaz('estado', 'list')"><i class="bi bi-buildings-fill me-2"></i>Estado</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-outline-dark btn-lg rounded-3 shadow-lg" href="#nav-bar" onclick="javascript:cargarInterfaz('municipio', 'list')"><i class="bi bi-building me-2"></i>Municipio</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-outline-dark btn-lg rounded-3 shadow" href="#nav-bar" onclick="javascript:cargarInterfaz('localidad', 'list')"><i class="bi bi-geo-alt-fill me-2"></i>Localidad</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-outline-dark btn-lg rounded-3 shadow-lg" href="#nav-bar" onclick="javascript:cargarInterfaz('colonia', 'list')"><i class="bi bi-house-door me-2"></i>Colonia</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a class="btn btn-outline-dark btn-lg rounded-3 shadow-lg" href="#nav-bar" onclick="javascript:cargarInterfaz('meses', 'list')"><i class="bi bi-calendar-month me-2"></i>Meses</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-outline-dark btn-lg rounded-3 shadow" href="#nav-bar" onclick="javascript:cargarInterfaz('moneda', 'list')"><i class="bi bi-currency-exchange me-2"></i>Moneda</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-outline-dark btn-lg rounded-3 shadow" href="#nav-bar" onclick="javascript:cargarInterfaz('metodopago', 'list')"><i class="bi bi-credit-card-2-front me-2"></i>Metodo de Pago</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-outline-dark btn-lg rounded-3 shadow-lg" href="#nav-bar" onclick="javascript:cargarInterfaz('formapago', 'list')"><i class="bi bi-credit-card-fill me-2"></i>Forma de Pago</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-outline-dark btn-lg rounded-3 shadow" href="#nav-bar" onclick="javascript:cargarInterfaz('impuesto', 'list')"><i class="bi bi-file-earmark-binary-fill me-2"></i>Impuesto</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a class="btn btn-outline-dark btn-lg rounded-3 shadow-lg" href="#nav-bar" onclick="javascript:cargarInterfaz('objetoimp', 'list')"><i class="bi bi-motherboard-fill me-2"></i>Objeto Impuesto</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-outline-dark btn-lg rounded-3 shadow-lg" href="#nav-bar" onclick="javascript:cargarInterfaz('exportacion', 'list')"><i class="bi bi-box-arrow-up-left me-2"></i>Exportación</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-outline-dark btn-lg rounded-3 shadow" href="#nav-bar" onclick="javascript:cargarInterfaz('tiporelacion', 'list')"><i class="bi bi-flag-fill me-2"></i>Tipo de Relación</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-outline-dark btn-lg rounded-3 shadow" href="#nav-bar" onclick="javascript:cargarInterfaz('tipofactor', 'list')"><i class="bi bi-asterisk me-2"></i>Tipo Factor</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-outline-dark btn-lg rounded-3 shadow-lg" href="#nav-bar" onclick="javascript:cargarInterfaz('tipodecomprobante', 'list')"><i class="bi bi-newspaper me-2"></i>Tipo de Comprobante</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a class="btn btn-outline-dark btn-lg rounded-3 shadow" href="#nav-bar" onclick="javascript:cargarInterfaz('regimenfiscal', 'list')"><i class="bi bi-geo-alt-fill me-2"></i>Régimen Fiscal</a>
+                    </td>
+                    <td colspan="2">
+                        <a class="btn btn-outline-dark btn-lg rounded-3 shadow" href="#nav-bar" onclick="javascript:cargarInterfaz('claveprodserv', 'list')"><i class="bi bi-flag-fill me-2"></i>Clave Producto Servicio</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-outline-dark btn-lg rounded-3 shadow" href="#nav-bar" onclick="javascript:cargarInterfaz('claveunidad', 'list')"><i class="bi bi-buildings-fill me-2"></i>Clave Unidad</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-outline-dark btn-lg rounded-3 shadow" href="#nav-bar" onclick="javascript:cargarInterfaz('periodicidad', 'list')"><i class="bi bi-clock-fill me-2"></i>Periodicidad</a>
+                    </td>
+                </tr>
+            </table>
         </div>
+
+        <br>
     </div>
 
-    <hr class="border border-white border-2 opacity-50 my-5">
-
-
-    <footer class='bg-dark p-3'>
+    <footer class='bg-dark p-3 align-items-end'>
         <div class='row text-white pt-4'>
             <div class='col-lg-4 col-md-6 col-sm-12 text-center mb-4'>
                 <div>
-                    <img src="../Project_samava/image/Logo Samava.png" alt="" class='mb-4 w-50'>
+                    <img src="../Project_samava/image/Logo Samava.png" class='mb-4 w-50 rounded-4'>
                     <h5 class=' px-5 text-center'>Tecnología Comercial y Servicios Integrales Samava Sas de CV</h5>
                 </div>
             </div>
